Fix event list name on smaller screen devices

--- a/src/components/EventListItem/style.css
+++ b/src/components/EventListItem/style.css
@@ -51,3 +51,9 @@
 .chosen-event-list-name-highlight {
   background-color: rgb(240, 240, 241);
 }
+
+@media only screen and (max-width: 320px) {
+  .event-name p {
+    margin-right: 20px;
+  }
+}
